# learning-whisper

./: README.md  pyproject.toml
