[tool.poetry]
name = "learning-whisper"
version = "0.1.0"
description = ""
authors = ["gomesuit <9404411+gomesuit@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "learning_whisper"}]

[tool.poetry.dependencies]
python = "^3.11"
soundcard = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
